<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"

    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/forgot_password"
        android:textColor="@color/buttoncolor1"
        android:textSize="@dimen/medim_large_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/forgot_password_text"
        android:textColor="@color/buttoncolor1"
        android:textSize="@dimen/medium_text_size" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_bg"
        android:ems="10"
        android:fontFamily="@font/opensans_regular"
        android:gravity="center_vertical"

        android:hint="@string/email"
        android:inputType="text"
        android:padding="8dp"
        android:textColor="@color/buttoncolor1"
        android:textColorHint="@color/buttoncolor1"
        android:textSize="@dimen/medium_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="0.50"
            android:background="@drawable/buttonborder"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:padding="7dp"
            android:text="@string/cancel"
            android:id="@+id/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_text_size" />

        <Button
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.50"
            android:background="@drawable/buttonborder"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:id="@+id/ok"
            android:padding="7dp"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_text_size" />
    </LinearLayout>
</LinearLayout>